change primary color

--- a/components/date-picker/DatePicker.module.scss
+++ b/components/date-picker/DatePicker.module.scss
@@ -97,10 +97,10 @@
 }
 
 .selected {
-  background-color: #9b0000;
+  background-color: #b240da;
   color: white;
 
   &:hover {
-    background-color: #9b00007a;
+    background-color: #b240da7a;
   }
 }
