--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -536,7 +536,7 @@ button {
   color: #2684ff;
 }
 .red {
-  color: #9b0000;
+  color: #b240da;
 }
 .transparent-input {
   outline: none;
@@ -603,7 +603,7 @@ button {
 }
 
 .primary-color {
-  color: #9b0000;
+  color: #b240da;
 }
 
 .text-secondary {
@@ -755,12 +755,12 @@ button {
   }
 
   a {
-    color: #9b0000;
+    color: #b240da;
   }
 }
 
 .view-cart {
-  color: #9b0000;
+  color: #b240da;
   cursor: pointer;
   text-decoration: underline;
   margin-left: 1rem;
@@ -792,7 +792,7 @@ button {
 }
 
 .copy-icon {
-  color: #9b0000;
+  color: #b240da;
 
   &.active {
     color: #22c55e;
