--- a/components/button/Button.module.scss
+++ b/components/button/Button.module.scss
@@ -1,5 +1,5 @@
 .button {
-  background-color: #9b0000;
+  background-color: #b240da;
   color: white;
   font-weight: 700;
   padding: 0.8rem 1.6rem;
@@ -39,18 +39,18 @@
   }
   &.accent {
     background-color: white;
-    color: #9b0000;
-    border: 0.1rem solid #9b0000;
+    color: #b240da;
+    border: 0.1rem solid #b240da;
   }
   &.accent {
     background-color: transparent;
-    color: #9b0000;
-    border: 0.1rem solid #9b0000;
+    color: #b240da;
+    border: 0.1rem solid #b240da;
   }
 
   &.transparent {
     background-color: transparent;
-    color: #9b0000;
+    color: #b240da;
     border: none;
     &:hover {
       background-color: rgba(0, 0, 0, 0.1);
@@ -60,7 +60,7 @@
     width: fit-content;
     min-width: 0;
     padding: 0;
-    color: #9b0000;
+    color: #b240da;
     background-color: unset;
   }
 
