--- a/components/checkbox/Checkbox.module.scss
+++ b/components/checkbox/Checkbox.module.scss
@@ -35,8 +35,8 @@
   }
 
   .checkbox:checked ~ .check-wrapper {
-    background-color: #9b0000;
-    border-color: #9b0000;
+    background-color: #b240da;
+    border-color: #b240da;
     .check-icon {
       border: 0 solid white;
       border-width: 0 0 0.2rem 0.2rem;
@@ -47,10 +47,10 @@
 
     &.transparent {
       background-color: white;
-      border-color: #9b0000;
+      border-color: #b240da;
 
       .check-icon {
-        border-color: #9b0000;
+        border-color: #b240da;
       }
     }
   }
