--- a/components/progress-bar/ProgressBar.module.scss
+++ b/components/progress-bar/ProgressBar.module.scss
@@ -9,7 +9,7 @@
 
   .progress-bar {
     height: 100%;
-    background-color: #9b0000;
+    background-color: #b240da;
     transition: width 0.3s ease-in-out;
   }
 }
