--- a/pages/filters.module.scss
+++ b/pages/filters.module.scss
@@ -89,17 +89,17 @@
         align-items: center;
         text-align: center;
         padding: 0 0.5rem;
-        color: #9b0000;
+        color: #b240da;
         cursor: pointer;
         font-size: 1.3rem;
         border: 0.2rem solid transparent;
 
         &.active {
-          border-color: #9b0000;
+          border-color: #b240da;
         }
 
         &:hover {
-          border-color: #9b0000;
+          border-color: #b240da;
         }
 
         @media (max-width: 650px) {
@@ -225,18 +225,18 @@
         font-weight: 700;
         margin: auto;
         text-decoration: underline;
-        color: #9b0000;
+        color: #b240da;
       }
 
       .filter-link {
         &:hover {
           text-decoration: underline;
-          color: #9b0000;
+          color: #b240da;
         }
 
         &.active {
           text-decoration: underline;
-          color: #9b0000;
+          color: #b240da;
         }
       }
     }
@@ -429,7 +429,7 @@
   }
 
   .red {
-    color: #9b0000;
+    color: #b240da;
   }
 }
 
