--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -160,7 +160,7 @@
           width: 1.6rem;
           margin: 0.6rem 0 0.1rem;
           font-weight: bold;
-          color: #9b0000;
+          color: #b240da;
           border-radius: 50%;
           font-size: 1.1rem;
         }
@@ -354,7 +354,7 @@
   }
 
   .red {
-    color: #9b0000;
+    color: #b240da;
   }
 }
 
