--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -724,7 +724,7 @@
     }
 
     span {
-      background-color: #9b0000;
+      background-color: #B240DA;
       border-radius: 50%;
       height: 2.5rem;
       width: 2.5rem;
