--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -454,9 +454,13 @@
   }
 }
 .main {
-  margin-top: 5rem;
+  margin-top: 6.8rem;
   min-height: calc(100vh - 5.5rem);
   background-color: white;
+
+  @media (max-width: 650px) {
+    margin-top: 5rem;
+  }
 }
 
 .backdrop {
