--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -97,6 +97,16 @@ button {
     cursor: pointer;
   }
 }
+
+strong,
+span {
+  display: inline-block;
+}
+
+li {
+  list-style: none;
+}
+
 .title {
   font-size: 1.8rem;
   &.small {
@@ -802,3 +812,34 @@ button {
 .blue {
   color: #2684ff;
 }
+
+.text-small {
+  font-size: 1.4rem;
+}
+
+.text-medium {
+  font-size: 1.15rem;
+}
+
+.text-regular {
+  font-size: 1.2rem;
+}
+
+.text-large {
+  font-size: 2.2rem;
+
+  @media (max-width: 650px) {
+    font-size: 1.5rem;
+  }
+}
+
+.text-extra-large {
+  font-size: 3.1rem;
+
+  @media (max-width: 650px) {
+    font-size: 1.8rem;
+  }
+}
+
+// 16px: 1.2rem
+// 32px 2.3rem
