--- a/pages/faq.module.scss
+++ b/pages/faq.module.scss
@@ -30,6 +30,7 @@
 
 .container {
   padding: 0 6rem;
+  // width: 100%;
 
 
   @media (max-width: 650px) {
@@ -40,6 +41,7 @@
 .content {
   margin: 4rem 0;
   display: flex;
+  // width: 100%;
 
   @media (max-width: 650px) {
     flex-direction: column;
@@ -47,7 +49,7 @@
   }
 
   .faq-body{
-    // width: 90%;
+    // max-width: 800px;
     // margin: 0 auto;
     .sub-title {
         @media (max-width: 650px) {
@@ -64,7 +66,9 @@
         justify-content: space-between;
         align-items: center;
         font-size: 1.5rem;
-        margin: 20px 0;
+        border-bottom: 1px solid #F4F4F4;
+        padding: 20px 10px;
+        transition: background-color .5s ease-out;
         .icon-container{
             .expand-icon {
                 vertical-align: bottom;
@@ -87,14 +91,21 @@
       }
     .faq-answer{
       font-size: 1.2rem;
-      border-top: 1px solid #EED4F7;
-      padding: 10px 0;
+      background-color: #FAF2FD;
+      padding: 10px 5px;
+      color: #470F5B;
+   
     }
-
+    .faq-question:hover{
+      background-color: #FAF2FD;
+    }
+    .faq-question-open{
+      border-bottom: 1px solid #EED4F7;
+      background-color: #FAF2FD;
+    }
     @media (max-width: 650px) {
         display: flex;
         flex-direction: column;
-        column-gap: 10px;
         justify-content: space-between;
         // width: 100%;
         // margin: auto;
