--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -802,124 +802,51 @@
 
 .footer {
   line-height: 1.7;
+  background-image: url("/images/footer-bg.svg");
+  position: relative;
+  margin-top: 8rem; //TODO remove
 
   @media (max-width: 650px) {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
   .footer-wrapper {
     padding: 2rem 6rem;
-    background-color: #f9fafb;
+    padding-top: 8rem;
 
     @media (max-width: 650px) {
-      padding: 2rem 3rem;
+      padding: 2rem;
+      padding-top: 6rem;
     }
   }
 
-  .logo {
-    height: 3rem;
-    width: auto;
+  .footer-logo {
+    position: absolute;
+    top: -4rem;
+    left: 6rem;
+    width: 8rem;
+    height: 8rem;
+
+    .logo-image {
+      width: 100%;
+      height: 100%;
+    }
+
+    @media (max-width: 650px) {
+      left: 2rem;
+      width: 7rem;
+      height: 7rem;
+    }
+  }
+
+  .news-btn {
+    background-color: white;
+    border: 1px solid var(--text-80, #474a57);
+    padding: 0.8rem 1.6rem;
+    margin-top: 1.6rem;
   }
 
   .grayed {
     color: #6b7280;
-  }
-
-  a,
-  strong {
-    display: block;
-  }
-
-  .top {
-    display: flex;
-    justify-content: space-between;
-
-    & > div {
-      max-width: 30%;
-
-      & > * {
-        margin-bottom: 0.8rem;
-
-        &:last-child {
-          margin-bottom: 0;
-        }
-      }
-
-      .wrap {
-        word-wrap: break-word;
-      }
-    }
-
-    @media (max-width: 650px) {
-      flex-direction: column;
-
-      & > div {
-        max-width: 100%;
-
-        & > * {
-          margin-bottom: 0.8rem;
-
-          &:last-child {
-            margin-bottom: 0;
-          }
-        }
-      }
-    }
-  }
-
-  .middle {
-    display: flex;
-    justify-content: space-between;
-
-    .branches {
-      display: flex;
-      justify-content: space-between;
-
-      & > div {
-        margin-right: 0.5rem;
-
-        &:last-child {
-          margin-right: 0;
-        }
-      }
-
-      @media (max-width: 650px) {
-        flex-direction: column;
-        margin-left: 1.2rem;
-      }
-
-      .branch {
-        @media (max-width: 650px) {
-          margin-top: 1rem;
-        }
-      }
-    }
-
-    strong {
-      margin-bottom: 1rem;
-    }
-
-    & > div {
-      margin-right: 0.8rem;
-
-      &:last-child {
-        margin-right: 0;
-      }
-    }
-
-    @media (max-width: 650px) {
-      flex-direction: column;
-
-      strong {
-        margin-bottom: 0.5rem;
-      }
-
-      & > div {
-        width: 100%;
-
-        margin-right: 0;
-        margin-bottom: 1rem;
-      }
-    }
   }
 
   #newsletter {
@@ -935,6 +862,47 @@
 
     @media (max-width: 650px) {
       width: 100%;
+    }
+  }
+
+  .top {
+    display: grid;
+    grid-template-columns: 27% repeat(4, 1fr);
+    justify-content: space-between;
+    column-gap: 1rem;
+
+    @media (max-width: 650px) {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: repeat(4, max-content);
+      row-gap: 2rem;
+
+      & > *:first-child {
+        grid-column: 1 / -1;
+      }
+    }
+  }
+
+  .bottom {
+    display: grid;
+    grid-template-columns: 30% repeat(3, 1fr);
+    justify-content: space-between;
+    margin-top: 1.5rem;
+    column-gap: 1rem;
+
+    @media (max-width: 650px) {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: repeat(3, max-content);
+      gap: 2rem;
+
+      & > *:first-child {
+        order: 5;
+        grid-column: 1 / -1;
+        grid-row: 3;
+      }
+    }
+
+    @media (max-width: 500px) {
+      column-gap: 1rem;
     }
   }
 }
@@ -962,24 +930,6 @@
       top: 6rem;
       opacity: 1;
       z-index: 8;
-    }
-  }
-}
-
-.bottom {
-  background-color: #1e2832;
-  color: white;
-  padding: 1rem 6rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  @media (max-width: 650px) {
-    flex-direction: column;
-    padding: 1rem 3rem;
-
-    .payment-icon {
-      width: 100%;
     }
   }
 }
