--- a/pages/contact/index.module.scss
+++ b/pages/contact/index.module.scss
@@ -48,6 +48,7 @@
         display: flex;
         justify-content: space-between;
         width: 90%;
+        margin-bottom: 2rem;
 
         div:first-child {
           width: 55%;
