--- a/pages/faq.module.scss
+++ b/pages/faq.module.scss
@@ -7,13 +7,16 @@
     font-size: 2.5rem;
     font-weight: 800;
     width: 50%;
-    text-align: center;
     color: #1F1F1F;
-    
     @media (max-width: 650px) {
       font-size: 2.2rem;
       width: 100%;
     }
+  }
+  .hero-content {
+    position: relative;
+    top: 40%;
+    left: 8%;
   }
 }
 
