--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -841,5 +841,12 @@ li {
   }
 }
 
+.faq-li{
+list-style: decimal;
+word-wrap: break-word;
+}
+.faq-ol{
+  padding: 20px;
+}
 // 16px: 1.2rem
 // 32px 2.3rem
