complete suth ui implementation

--- a/components/checkbox/Checkbox.module.scss
+++ b/components/checkbox/Checkbox.module.scss
@@ -3,7 +3,7 @@
   width: fit-content;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 
   &.disabled {
     cursor: not-allowed;
@@ -15,7 +15,8 @@
   }
 
   .text {
-    margin-left: 0.5rem;
+    margin-left: 1rem;
+    width: fit-content;
     // max-width: 10rem;
     &::first-letter {
       text-transform: uppercase;
@@ -25,13 +26,17 @@
   .check-wrapper {
     border: 0.15rem solid #4b5563;
     border-radius: 0.2rem;
-    height: 1.1rem;
-    width: 1.1rem;
-    background-color: white;
+    height: 1.5rem;
+    width: 1.5rem;
+    background-color: transparent;
     transition: 0.3s ease-out;
     display: flex;
     justify-content: center;
     align-items: center;
+
+    &.rounded {
+      border-radius: 50%;
+    }
   }
 
   .checkbox:checked ~ .check-wrapper {
@@ -40,9 +45,9 @@
     .check-icon {
       border: 0 solid white;
       border-width: 0 0 0.2rem 0.2rem;
-      width: 90%;
-      height: 60%;
-      transform: rotate(-45deg) translate(0.05rem, -0.05rem);
+      width: 70%;
+      height: 40%;
+      transform: rotate(-45deg) translate(0.1rem, -0.1rem);
     }
 
     &.transparent {
@@ -51,6 +56,15 @@
 
       .check-icon {
         border-color: #b240da;
+      }
+    }
+
+    &.secondary {
+      background-color: white;
+      border-color: #000;
+
+      .check-icon {
+        border-color: #000;
       }
     }
   }
