--- a/pages/product/products.module.scss
+++ b/pages/product/products.module.scss
@@ -1,6 +1,7 @@
 .product {
   padding: 2rem 4rem;
   padding-top: 3rem;
+  position: relative;
 
   .temporary-notes {
     min-height: 3rem;
@@ -17,11 +18,12 @@
 
   .product-content {
     margin-bottom: 3rem;
+    margin-top: 2rem;
 
     & > div {
       flex-basis: 51%;
 
-      &.slider-wrapper {
+      &.left-content {
         flex-basis: 45%;
       }
 
@@ -35,16 +37,16 @@
     @media (max-width: 650px) {
       flex-direction: column;
       margin-bottom: 1rem;
+      margin-top: 1rem;
 
       & > div {
         flex-basis: 100%;
 
-        &.slider-wrapper {
+        &.left-content {
           flex-basis: 100%;
         }
 
         margin: 0;
-        margin-top: 1.2rem;
 
         &:first-child {
           margin-top: 0;
@@ -53,77 +55,186 @@
     }
   }
 
-  .slider-wrapper {
-    .slider {
-      overflow: hidden;
-      width: 100%;
-      display: flex;
+  .left-content {
+    @media (max-width: 650px) {
+      padding: 0rem 2rem;
+    }
+
+    .carousel-wrapper {
       position: relative;
+      max-height: 38rem;
+      margin-right: 1rem;
 
       @media (max-width: 650px) {
-        overflow-x: scroll;
-        overflow-y: hidden;
-        padding-left: 0.5rem;
+        max-height: 10rem;
       }
 
-      .slide {
-        width: 100%;
-        height: 40rem;
-        opacity: 0;
-        margin-bottom: 2rem;
-        transition: 0.5s ease-out;
+      .carousel-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        overflow: hidden;
+        height: 38rem;
+        border: 0.1rem #e5e7eb solid;
+      }
+
+      .carousel-images {
+        display: flex;
+        flex-direction: column;
+        transition: transform 0.5s ease;
+        justify-content: center;
+        @media (max-width: 650px) {
+          flex-direction: row;
+        }
+      }
+
+      .carousel-image {
+        max-height: 8.5rem;
+        margin: 0.3rem 0;
+        transition: 0.3s ease-out;
+        object-fit: cover;
+
+        &.active {
+          opacity: 0.5;
+        }
+
+        &:first-child {
+          margin-top: 0;
+        }
+
+        &:hover {
+          cursor: pointer;
+          opacity: 0.8;
+        }
+      }
+
+      .prev-button,
+      .next-button {
         position: absolute;
+        left: 50%;
+        width: 2.5rem;
+        height: 2.5rem;
+        background-color: white;
+        border-radius: 50%;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        filter: drop-shadow(0px 2px 8px rgba(0, 0, 0, 0.15));
 
         @media (max-width: 650px) {
-          opacity: 1;
+          display: none;
+        }
+      }
+
+      .prev-button {
+        top: -1rem;
+        transform: translateX(-50%) rotate(90deg);
+      }
+
+      .next-button {
+        bottom: -1rem;
+        transform: translateX(-50%) rotate(270deg);
+      }
+    }
+
+    .slider-container {
+      display: flex;
+      height: 40rem;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      margin-bottom: 2.3rem;
+
+      @media (max-width: 650px) {
+        flex-direction: column;
+        justify-content: flex-start;
+        margin-bottom: 0;
+        height: fit-content;
+      }
+
+      .slider {
+        overflow: hidden;
+        width: 100%;
+        display: flex;
+        position: relative;
+        height: 100%;
+
+        @media (max-width: 650px) {
+          height: 28rem;
+          border-radius: 0.7rem;
+        }
+
+        .slide {
           width: 100%;
-          height: 30rem;
-          position: relative;
-          margin-right: 0.1rem;
-          border-radius: 1rem;
-          margin-bottom: 0;
+          height: 40rem;
+          opacity: 0;
+          margin: auto;
+          margin-bottom: 2rem;
+          transition: 0.5s ease-out;
+          position: absolute;
+
+          @media (max-width: 650px) {
+            height: 28rem;
+            margin-bottom: 0;
+          }
+
+          &.active-slide {
+            opacity: 1;
+            width: 100%;
+            height: 40rem;
+            margin-bottom: 2rem;
+            transition: 0.3s ease-out;
+            position: relative;
+
+            @media (max-width: 650px) {
+              margin-bottom: 0;
+            }
+          }
+
+          img {
+            width: 100%;
+            height: 40rem;
+            object-fit: cover;
+
+            @media (max-width: 650px) {
+              height: 28rem;
+            }
+          }
+        }
+      }
+
+      .images {
+        margin-top: 1.2rem;
+        justify-content: space-between;
+        overflow-x: auto;
+        white-space: nowrap;
+        width: 100%;
+
+        & > * {
+          margin-right: 1rem;
 
           &:last-child {
             margin-right: 0;
           }
         }
 
-        &.active-slide {
-          opacity: 1;
-          width: 100%;
-          height: 40rem;
-          margin-bottom: 2rem;
-          transition: 0.3s ease-out;
-          position: relative;
-
-          @media (max-width: 650px) {
-            height: 30rem;
-            margin-bottom: 0;
-          }
+        .image-container {
+          height: 8rem;
+          width: 8rem;
+          display: inline-block;
         }
 
         img {
           width: 100%;
-          height: 40rem;
+          height: 100%;
+          border-radius: 0.3rem;
           object-fit: cover;
-
-          @media (max-width: 650px) {
-            height: 30rem;
-            width: 30rem;
-            border-radius: 1.5rem;
-          }
+          opacity: 0.7;
         }
-      }
-    }
 
-    .images {
-      width: 100%;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 0.1rem;
-
-      @media (max-width: 650px) {
-        display: none;
+        .active {
+          opacity: 1;
+        }
       }
     }
   }
@@ -150,48 +261,56 @@
     }
   }
 
-  .slide-image {
-    cursor: pointer;
-    opacity: 0.5;
-    transition: 0.3s ease-out;
-    width: 24.7%;
-    height: 9vw;
-    object-fit: cover;
+  .tabs {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+    font-size: 1.3rem;
 
-    &:hover {
-      opacity: 1;
-    }
+    .tab {
+      padding: 0.4rem 1.2rem;
+      font-weight: bold;
+      &.active {
+        color: #b240da;
+        border-top: 0.1rem #d1d5db solid;
+        border-right: 0.1rem #d1d5db solid;
+      }
 
-    &.active-image {
-      opacity: 1;
-    }
-  }
+      &.in-active {
+        border-bottom: 0.1rem #d1d5db solid;
 
-  .tab {
-    margin: 1.5rem 0;
-    // border-bottom: 0.15rem solid #f1f1f1;
-    display: inline-block;
-    transition: 0.3s ease-out;
-    position: relative;
-
-    &::before {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 0.1rem;
-      background-color: #f1f1f1;
-      transition: 0.3s ease-out;
-      z-index: -1;
+        &:first-child {
+          border-right: 0.1rem #d1d5db solid;
+        }
+      }
     }
   }
+  .tab-content {
+    margin-bottom: 2rem;
+  }
 
-  .tab-title {
+  .delivery-info {
+    background-color: #fcf6fd;
+    padding: 0.8rem 1.1rem;
+  }
+
+  .size-title {
     padding-bottom: 0.4rem;
     transition: 0.3s ease-out;
-    border-bottom: 0.15rem solid #b240da;
     font-weight: 700;
+    font-size: 1.15rem;
+  }
+
+  .mobile-cart {
+    position: fixed;
+    bottom: 0;
+    width: 90%;
+    background-color: white;
+    padding: 1rem 0;
+    left: 50%;
+    transform: translateX(-50%);
+    border-top: 0.1rem #e5e7eb solid;
+    z-index: 7;
   }
 
   .delivery {
@@ -217,18 +336,28 @@
     }
 
     .social-icon {
-      height: 2rem;
-      width: 2rem;
-      background-color: #f1f1f1;
+      height: 2.4rem;
+      width: 2.4rem;
+      background-color: #60a5fa;
       display: inline-flex;
       justify-content: center;
       align-items: center;
+      border-radius: 50%;
+
+      &.whatsapp {
+        background-color: #16a34a;
+      }
+
+      .icon {
+        height: 1.4rem;
+        width: 1.4rem;
+      }
 
       @media (max-width: 650px) {
         height: 1.3rem;
         width: 1.3rem;
 
-        img {
+        .icon {
           height: 1.3rem;
           width: 1.3rem;
         }
@@ -253,13 +382,14 @@
 
     .size {
       padding: 0.5rem;
-      border: 0.1rem solid #d1d5db;
+      border: 0.1rem solid #e5e7eb;
       display: inline-block;
       text-transform: capitalize;
 
       margin: 0.3rem;
       cursor: pointer;
       transition: 0.3s ease-out;
+      color: #202020;
 
       &:hover {
         border-color: rgba(209, 213, 219, 0.8);
@@ -274,7 +404,7 @@
       }
 
       &.not-selected {
-        border-color: #d1d5db;
+        border-color: #e5e7eb;
         color: black;
         background-color: #f9fafb;
       }
@@ -370,6 +500,6 @@
 }
 
 .subTitle {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: normal;
 }
