--- a/components/flower-card/FlowerCard.module.scss
+++ b/components/flower-card/FlowerCard.module.scss
@@ -1,8 +1,6 @@
 .flower-card {
   display: inline-block;
-  text-align: center;
   border: 0.1rem solid #f3f4f6;
-  border-radius: 0.1rem;
   background-color: white;
   transition: 0.3s ease-out;
   &.six-x-grid {
@@ -114,10 +112,11 @@
     text-overflow: ellipsis;
   }
   .buy-btn {
-    padding: 0.4rem 0.6rem;
-    min-width: 6rem;
-    font-weight: normal;
-    font-size: 0.9rem;
+    background-image: url("/icons/add-box-line.svg");
+    height: 30px;
+    width: 30px;
+    background-position: center center;
+    background-size: cover;
 
     @media (max-width: 400px) {
       width: 100%;
@@ -125,12 +124,22 @@
     }
   }
 
+  .gift-btn{
+    padding: 0.8rem 0.6rem;
+    min-width: 6rem;
+    font-weight: normal;
+    font-size: 0.9rem;
+    width: 100%;
+        @media (max-width: 400px) {
+            margin-top: 0.5rem;
+          }
+  }
+
   .price-btn-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 0.5rem;
-
     &.price {
       justify-content: space-between;
     }
@@ -143,7 +152,6 @@
   .img-wrapper {
     overflow: hidden;
     height: 17rem;
-    border-radius: 0.2rem 0.2rem 0 0;
     @media (max-width: 1250px) {
       height: 16rem;
     }
@@ -166,7 +174,6 @@
         height: 14rem;
       }
       object-fit: cover;
-      border-radius: 0.2rem 0.2rem 0 0;
       transition: 0.3s ease-out;
       &:hover {
         transform: scale(1.1);
