--- a/components/select/Select.module.scss
+++ b/components/select/Select.module.scss
@@ -9,7 +9,7 @@ $placeholder: rgba(0, 0, 0, 0.6);
   z-index: 3;
   display: inline-block;
   border-radius: 0.3rem;
-  width: 16rem;
+  width: 3rem;
   &.active {
     z-index: 5;
   }
@@ -24,7 +24,7 @@ $placeholder: rgba(0, 0, 0, 0.6);
     padding: 0 0.3rem;
   }
   &.light {
-    border: 0.1rem solid #e5e7eb;
+    border: 0.1rem solid #1F1F1F;
     background-color: white;
   }
   &.dimmed {
