--- a/components/flower-card/FlowerCard.module.scss
+++ b/components/flower-card/FlowerCard.module.scss
@@ -129,7 +129,9 @@
       margin-top: 0.5rem;
     }
   }
-
+  .buy-btn:hover{
+    transform: scale(1.2);
+  }
   .gift-btn{
     padding: 0.8rem 0.6rem;
     min-width: 6rem;
@@ -143,14 +145,15 @@
 
   .price-btn-wrapper {
     display: flex;
-    justify-content: center;
-    align-items: center;
     margin-top: 0.5rem;
     &.price {
       justify-content: space-between;
     }
 
     @media (max-width: 400px) {
+      .price-text{
+       margin-right: 3.5rem;
+      }
       flex-direction: column;
       align-items: center;
     }
