--- a/pages/filters.module.scss
+++ b/pages/filters.module.scss
@@ -30,7 +30,7 @@
         opacity: 0.9;
         
         p:first-of-type {
-            font-size: 3rem;
+            font-size: 2.3rem;
             font-weight: 800;
             width: 90%;
             color:#1F1F1F;
@@ -56,7 +56,7 @@
              }
 
           position:relative;
-          top: 100px;
+          top: 170px;
           width: 90%;
           background-color: white;
           margin: auto;
@@ -88,7 +88,7 @@
   }
 
   .content {
-    padding: 4rem 7rem;
+    padding: 0 7rem 4rem 7rem;
 
     @media (max-width: 650px) {
       padding: 3rem 2rem;
@@ -151,7 +151,7 @@
        .sorts-mobile{
         @media (max-width: 650px) {
 
-          margin: 6rem 0 1rem 0;
+          margin: 12rem 0 1rem 0;
           }
        }
       .date-wrapper {
