--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -456,7 +456,7 @@
 .main {
   margin-top: 6.8rem;
   min-height: calc(100vh - 5.5rem);
-  background-color: white;
+  background-color: #f9f9f9;
 
   @media (max-width: 650px) {
     margin-top: 5rem;
