--- a/pages/checkout.module.scss
+++ b/pages/checkout.module.scss
@@ -1,5 +1,9 @@
 @import "../styles/animations.scss";
 
+.margin-bottom {
+  margin-bottom: 1.6rem;
+}
+
 .checkout-page {
   padding: 4rem 7rem 0;
   position: relative;
@@ -15,21 +19,12 @@
     width: 48%;
   }
 
-  .payment-info {
-    font-size: 1.3rem;
-    background-color: #fdf7f7;
-    font-weight: 600;
-    padding: 1rem;
-    border-radius: 0.6rem 0.6rem 0 0;
-    padding-left: 2rem;
-  }
-
   .left {
-    width: 64%;
+    width: 60%;
     padding-bottom: 6rem;
   }
   .right {
-    width: 30%;
+    width: 38%;
     margin-left: 2.2rem;
     position: sticky;
     top: 11rem;
@@ -54,13 +49,12 @@
       font-weight: bold;
     }
     .method {
-      background-color: #f9fafb;
       padding: 1.1rem;
       width: 48%;
       margin: 1.5rem 0;
-      border: none;
       transition: 0.1s ease-out;
-      border: 0.1rem solid transparent;
+      border: 0.1rem solid #d1d5db;
+      border-radius: 0.3rem;
       cursor: pointer;
       &:hover,
       &.active {
@@ -70,14 +64,30 @@
     }
   }
 
-  .border {
-    border: 0.1rem solid #e5e7eb;
-    border-radius: 0.6rem;
-    margin-bottom: 2rem;
+  .section {
+    border: 0.1rem solid #9ca3af;
+    padding: 1.6rem;
+    border-radius: 0.3rem;
+    height: fit-content;
+    margin-bottom: 3rem;
+
+    .section-title {
+      font-size: 1.6rem;
+      font-weight: 600;
+      color: #b240da;
+      margin-bottom: 1.6rem;
+    }
+
     .padding {
       padding: 0 2rem;
       padding-bottom: 1rem;
     }
+  }
+
+  .accepted-payments {
+    border: 0.1rem solid #9ca3af;
+    padding: 1rem;
+    border-radius: 0.3rem;
   }
 
   .pickup-locations {
@@ -87,18 +97,24 @@
   }
 
   .line-through {
-    background-color: #e5e7eb;
+    background-color: #eeeff4;
     height: 0.1rem;
     width: 100%;
     display: inline-block;
   }
-  .currency {
-    border: 0.1rem solid #e5e7eb;
-    padding: 0.5rem;
-    width: 2.5rem;
-    font-size: 1.4rem;
-    &.active {
-      border-color: #b240da;
+  .currency-wrapper {
+    background-color: #fcf6fd;
+    padding: 0.6rem 1rem;
+    .currency {
+      padding: 0.4rem;
+      width: 2.5rem;
+      font-size: 1.4rem;
+      background-color: white;
+      border-radius: 0.3rem;
+      &.active {
+        background-color: #b240da;
+        color: white;
+      }
     }
   }
 
@@ -111,10 +127,10 @@
   .payment-methods {
     margin-top: 2.5rem;
     .method {
-      border: 0.1rem solid #c2c2c2;
+      border: 0.1rem solid #e5e7eb;
       padding: 0.8rem;
       border-radius: 0.6rem;
-      margin-bottom: 1rem;
+      margin-bottom: 2rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -127,6 +143,11 @@
 
       &.remove {
         display: none;
+      }
+
+      .method-icon {
+        background-color: white;
+        padding: 0.5rem;
       }
     }
   }
@@ -461,6 +482,11 @@
 
       &.remove {
         display: none;
+      }
+
+      .method-icon {
+        background-color: white;
+        padding: 0.5rem;
       }
     }
   }
