--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -227,7 +227,7 @@ span {
 .hr {
   outline: none;
   border: none;
-  background-color: #dadbdd;
+  background-color: #9ca3af;
   height: 0.1rem;
 }
 .margin {
@@ -467,11 +467,10 @@ span {
 
 .input-group {
   display: flex;
+  flex-direction: column;
   width: 100%;
-  justify-content: flex-end;
-  align-items: center;
   margin: 0.8rem 0;
-  text-align: right;
+
   &.responsive {
     width: unset;
   }
@@ -484,7 +483,7 @@ span {
   .question {
     font-weight: bold;
     font-size: 0.9rem;
-    margin-right: 1rem;
+    margin-bottom: 0.4rem;
 
     @media (max-width: 650px) {
       font-size: 1rem;
@@ -845,13 +844,18 @@ span {
 .faq-ol {
   padding: 20px;
 }
-.price{
+.price {
   margin-left: 10px;
   text-align: center;
 }
-.search{
-  border: 1px solid #DADADA;
+.search {
+  border: 1px solid #dadada;
   padding: 0.5rem;
+}
+
+.white-bg {
+  background-color: #fff;
+  padding: 1rem;
 }
 // 16px: 1.2rem
 // 32px 2.3rem
