--- a/pages/checkout.module.scss
+++ b/pages/checkout.module.scss
@@ -10,18 +10,35 @@
   padding-bottom: 0;
   animation: fadein 2s ease-out forwards;
 
+  @media (max-width: 980px) {
+    padding: 2rem;
+  }
+
   .checkout-wrapper {
     position: relative;
     display: flex;
+
+    @media (max-width: 650px) {
+      flex-direction: column;
+    }
   }
 
   .password {
     width: 48%;
+
+    @media (max-width: 650px) {
+      width: 100%;
+    }
   }
 
   .left {
     width: 60%;
     padding-bottom: 6rem;
+
+    @media (max-width: 650px) {
+      width: 100%;
+      order: 3;
+    }
   }
   .right {
     width: 38%;
@@ -30,6 +47,28 @@
     top: 11rem;
     right: 0;
     height: 81vh;
+
+    @media (max-width: 650px) {
+      width: 100%;
+      order: 1;
+      position: relative;
+      top: 0;
+      margin-left: 0;
+      display: flex;
+      flex-direction: column;
+      height: fit-content;
+
+      & > :first-child {
+        order: 2;
+        margin-bottom: 1.8rem;
+      }
+
+      & > :last-child {
+        order: 1;
+        margin-bottom: 1.8rem;
+      }
+    }
+
     .apply-btn {
       min-width: 5rem;
       padding: 0.6rem 0;
@@ -40,6 +79,64 @@
     .hr {
       background-color: #e5e7eb;
       margin: 2rem 0;
+    }
+  }
+
+  .stages {
+    order: 2;
+    .stage {
+      display: flex;
+      font-size: 1.1rem;
+      align-items: flex-start;
+      margin-bottom: 2rem;
+      position: relative;
+
+      &.active {
+        color: #b240da;
+
+        .circle {
+          border-color: #f4ebff;
+          .dot {
+            background-color: #b240da;
+          }
+        }
+
+        .vertical-line {
+          background-color: #b240da;
+        }
+      }
+
+      &.last-stage {
+        .vertical-line {
+          display: none;
+        }
+      }
+      .circle {
+        margin-right: 1rem;
+        height: 2.2rem;
+        width: 2.2rem;
+        border-radius: 50%;
+        border: 0.2rem solid #e4e7ec;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+
+        .dot {
+          height: 0.6rem;
+          width: 0.6rem;
+          border-radius: 50%;
+          background-color: #e4e7ec;
+        }
+      }
+
+      .vertical-line {
+        height: 2.2rem;
+        width: 0.2rem;
+        background-color: #e4e7ec;
+        margin: 0 1rem;
+        position: absolute;
+        top: 2.2rem;
+      }
     }
   }
 
@@ -188,6 +285,11 @@
     width: 45%;
     padding-bottom: 2rem;
 
+    @media (max-width: 650px) {
+      width: 100%;
+      padding: 0;
+    }
+
     .complete-image {
       height: 14rem;
       width: 14rem;
@@ -257,6 +359,11 @@
     padding: 1.5rem;
     width: 40%;
     height: fit-content;
+    background-color: white;
+
+    @media (max-width: 650px) {
+      width: 100%;
+    }
     .detail {
       font-size: 1.4rem;
       font-weight: 600;
@@ -357,8 +464,6 @@
   }
 
   .content {
-    margin-top: 6rem;
-
     font-size: 1.1rem;
     line-height: 1.5;
     &.bold {
