--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,17 +1,3 @@
-@font-face {
-  font-family: "SharpSans";
-  src: url("../public/fonts/SharpSans.woff2") format("woff2");
-  font-display: swap;
-  font-weight: normal;
-}
-
-@font-face {
-  font-family: "SharpSans";
-  src: url("../public/fonts/sharp-sans-semibold.woff2") format("woff2");
-  font-display: swap;
-  font-weight: bold;
-}
-
 html {
   scroll-behavior: smooth;
   font-size: 88%;
@@ -64,7 +50,7 @@ html {
 
 body {
   font-size: 0.9rem;
-  font-family: "SharpSans", segoe UI, sans-serif;
+  font-family: "Figtree", segoe UI, sans-serif;
 }
 a,
 a:visited {
@@ -810,6 +796,10 @@ span {
   color: #2684ff;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .text-small {
   font-size: 1rem;
 }
@@ -845,12 +835,12 @@ span {
 .faq-ol {
   padding: 20px;
 }
-.price{
+.price {
   margin-left: 10px;
   text-align: center;
 }
-.search{
-  border: 1px solid #DADADA;
+.search {
+  border: 1px solid #dadada;
   padding: 0.5rem;
 }
 // 16px: 1.2rem
