--- a/components/button/Button.module.scss
+++ b/components/button/Button.module.scss
@@ -59,8 +59,9 @@
     width: fit-content;
     min-width: 0;
     padding: 0;
-    color: #b240da;
+    color: inherit;
     background-color: unset;
+    font-weight: unset;
   }
 
   &.responsive {
