--- a/components/flower-card/FlowerCard.module.scss
+++ b/components/flower-card/FlowerCard.module.scss
@@ -101,7 +101,7 @@
     text-overflow: ellipsis;
   }
   .subtitle {
-    font-size: small;
+    font-size: 0.9rem;
     color: #6b7280;
     margin-top: 0.2rem;
     display: -webkit-box;
@@ -110,9 +110,10 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-      @media (max-width:400px) {
-          border-bottom: 1px solid #EFF0F6;
-        }
+    height: 2.5rem;
+    @media (max-width: 400px) {
+      border-bottom: 1px solid #eff0f6;
+    }
   }
   .buy-btn {
     background-image: url("/icons/add-box-line.svg");
@@ -124,23 +125,23 @@
     @media (max-width: 400px) {
       background-image: none;
       color: white;
-      background-color: #B240DA;
+      background-color: #b240da;
       width: 100%;
       margin-top: 0.5rem;
     }
   }
-  .buy-btn:hover{
+  .buy-btn:hover {
     transform: scale(1.2);
   }
-  .gift-btn{
+  .gift-btn {
     padding: 0.8rem 0.6rem;
     min-width: 6rem;
     font-weight: normal;
     font-size: 0.9rem;
     width: 100%;
-        @media (max-width: 400px) {
-            margin-top: 0.5rem;
-          }
+    @media (max-width: 400px) {
+      margin-top: 0.5rem;
+    }
   }
 
   .price-btn-wrapper {
@@ -148,28 +149,21 @@
     margin-top: 0.5rem;
     &.price {
       justify-content: space-between;
+      font-size: 1rem;
     }
 
     @media (max-width: 400px) {
-      .price-text{
-       margin-right: 3.5rem;
+      .price-text {
+        margin-right: 3.5rem;
       }
       flex-direction: column;
       align-items: center;
+      justify-content: center;
     }
   }
   .img-wrapper {
     overflow: hidden;
-    height: 17rem;
-    @media (max-width: 1250px) {
-      height: 16rem;
-    }
-    @media (max-width: 1150px) {
-      height: 15rem;
-    }
-    @media (max-width: 1050px) {
-      height: 14rem;
-    }
+    height: fit-content;
     .flower-image {
       height: 17rem;
       width: 100%;
