--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -840,11 +840,7 @@ span {
   word-wrap: break-word;
 }
 .faq-ol {
-  padding: 20px;
-}
-.price {
-  margin-left: 10px;
-  text-align: center;
+  padding: 2rem;
 }
 .search {
   border: 1px solid #dadada;
