--- a/components/flower-card/FlowerCard.module.scss
+++ b/components/flower-card/FlowerCard.module.scss
@@ -91,14 +91,14 @@
       font-size: 1.3rem;
     }
   }
-  .title {
-    min-height: 3.5rem;
+  .name {
     display: -webkit-box;
     line-clamp: 2;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+    height: 2.8rem;
   }
   .subtitle {
     font-size: 0.9rem;
