--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -490,7 +490,7 @@
   }
 }
 .main {
-  margin-top: 6.8rem;
+  padding-top: 7.8rem;
   min-height: calc(100vh - 5.5rem);
   background-color: #f9f9f9;
 
