Fix merge conflicts

--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -490,9 +490,7 @@
   }
 }
 .main {
-
-  padding-top: 7.8rem;
-
+  margin-top: 5rem;
   min-height: calc(100vh - 5.5rem);
   background-color: #f9f9f9;
 
