--- a/components/input/Input.module.scss
+++ b/components/input/Input.module.scss
@@ -6,6 +6,7 @@
   border: 0.1rem solid #e5e7eb;
   transition: 0.3s ease-out;
   align-items: center;
+
   &.responsive {
     width: 100%;
   }
@@ -32,6 +33,7 @@
     outline: none;
     font-size: inherit;
     padding: 0.5rem;
+    color: rgba(0, 0, 0, 0.8);
 
     @media (max-width: 650px) {
       padding: 0.6rem;
@@ -50,7 +52,7 @@
       padding-left: 1.5rem;
     }
     &::placeholder {
-      color: #202020;
+      color: #9ca3af;
     }
     &.disable-resize {
       resize: none;
